# aiCityGML

./: .gitignore  CITYGML_3_0_OBJECTS.md  CMakeLists.txt  PROJECT_RULES.md  README.md  README_en.md  build.bat  commands.md  conanfile.txt  test_parser.cpp
cmake/: aicitygml-config.cmake.in  citygml-config.cmake.in
include/citygml/: citygml_parser.h
include/citygml/building/: citygml_building.h
include/citygml/construction/: citygml_construction.h
include/citygml/core/: citygml_appearance.h  citygml_base.h  citygml_feature.h  citygml_geometry.h  citygml_object.h  citygml_opening.h  citygml_space.h  citygml_surface.h
include/citygml/mesh/: mesh.h  mesh_generator.h
include/citygml/parser/: citygml_reader.h  gml_envelope_parser.h  gml_geometry_parser.h  parser_context.h  xml_document.h
src/building/: citygml_building.cpp  citygml_building.h
src/citygml/: citygml_parser.h
src/citygml/core/: citygml_geometry.h  citygml_object.h  citygml_surface.h
src/citygml/mesh/: mesh_generator.h
src/citygml/parser/: gml_envelope_parser.h  parser_context.h  xml_utils.h
src/citygml/writers/: obj_writer.h
src/construction/: citygml_construction.cpp  citygml_construction.h
src/core/: citygml_appearance.cpp  citygml_appearance.h  citygml_base.cpp  citygml_base.h  citygml_feature.cpp  citygml_feature.h  citygml_geometry.cpp  citygml_geometry.h  citygml_object.cpp  citygml_object.h  citygml_opening.h  citygml_space.cpp  citygml_space.h  citygml_surface.cpp  citygml_surface.h
src/mesh/: mesh.cpp  mesh.h  mesh_generator.cpp  mesh_generator.h
src/parser/: citygml_parser.cpp  citygml_parser.h  citygml_reader.cpp  citygml_reader.h  gml_envelope_parser.cpp  gml_envelope_parser.h  gml_geometry_parser.cpp  gml_geometry_parser.h  parser_context.cpp  parser_context.h  xml_document.cpp  xml_document.h  xml_utils.cpp  xml_utils.h
src/test/: test_parser.cpp  test_srsname.cpp  test_triangulate.cpp
src/writers/: obj_writer.cpp  obj_writer.h
testdata/: 2.gfs  2.gml  FZK-Haus-LoD-all-KIT-IAI-KHH-B36-V1.gfs  FZK-Haus.mtl  GeoBIM_BuildingsLOD3.gml  samplycity_bldg002.gml  samplycity_bldg010.gml  samplycity_bldg011.gml  test_generic_attrs.gml
